@@ -35,6 +35,8 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URL;
+import java.net.URLClassLoader;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -42,6 +44,7 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Scanner;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -86,7 +89,7 @@ import org.contikios.cooja.mote.memory.MemoryLayout;
 import org.contikios.cooja.mote.memory.SectionMoteMemory;
 import org.contikios.cooja.mote.memory.VarMemory;
 import org.contikios.cooja.util.StringUtils;
-import org.jdom.Element;
+import org.jdom2.Element;
 
 import org.contikios.cooja.contikimote.interfaces.ContikiLog;
 import org.contikios.cooja.contikimote.interfaces.ContikiRS232;
@@ -115,6 +118,7 @@ import org.contikios.cooja.contikimote.interfaces.ContikiRS232;
 public class ContikiMoteType extends BaseContikiMoteType {
 
   private static final Logger logger = LogManager.getLogger(ContikiMoteType.class);
+  private static int fileCounter = 1;
 
   private final Cooja gui;
 
@@ -162,8 +166,6 @@ public class ContikiMoteType extends BaseContikiMoteType {
     }
   }
 
-  private final String javaClassName; // Loading Java class name: Lib1.java.
-
   private NetworkStack netStack = NetworkStack.DEFAULT;
 
   // Type specific class configuration
@@ -182,7 +184,6 @@ public class ContikiMoteType extends BaseContikiMoteType {
    */
   public ContikiMoteType(Cooja gui) {
     this.gui = gui;
-    javaClassName = CoreComm.getAvailableClassName();
     projectConfig = gui.getProjectConfig().clone();
   }
 
@@ -242,7 +243,7 @@ public class ContikiMoteType extends BaseContikiMoteType {
     var env = new LinkedHashMap<String, String>();
     env.put("LIBNAME", "$(BUILD_DIR_BOARD)/" + getIdentifier() + ".cooja");
     env.put("COOJA_VERSION",  Cooja.CONTIKI_NG_BUILD_VERSION);
-    env.put("CLASSNAME", javaClassName);
+    env.put("CLASSNAME", getAvailableClassName() );
     env.put("COOJA_SOURCEDIRS", dirs.toString().replace("\\", "/"));
     env.put("COOJA_SOURCEFILES", sources.toString());
     env.put("CC", Cooja.getExternalToolsSetting("PATH_C_COMPILER"));
@@ -288,8 +289,7 @@ public class ContikiMoteType extends BaseContikiMoteType {
 
     // Allocate core communicator class
     final var firmwareFile = getContikiFirmwareFile();
-    logger.debug("Creating core communicator between Java class " + javaClassName + " and Contiki library '" + firmwareFile.getPath() + "'");
-    myCoreComm = CoreComm.createCoreComm(gui, tmpDir, javaClassName, firmwareFile);
+    myCoreComm = createCoreComm(gui, tmpDir, firmwareFile);
 
     /* Parse addresses using map file
      * or output of command specified in external tools settings (e.g. nm -a )
@@ -964,6 +964,16 @@ public class ContikiMoteType extends BaseContikiMoteType {
   }
 
   /**
+   * Get the class name of next free core communicator class. If null is
+   * returned, no classes are available.
+   *
+   * @return Class name
+   */
+  private static String getAvailableClassName() {
+    return "Lib" + fileCounter;
+  }
+
+  /**
    * Creates and returns a copy of this mote type's initial memory (just after
    * the init function has been run). When a new mote is created it should get
    * its memory from here.
@@ -1039,8 +1049,7 @@ public class ContikiMoteType extends BaseContikiMoteType {
       pb.directory(libraryFile.getParentFile());
       final Process p = pb.start();
       Thread readThread = new Thread(() -> {
-        try (BufferedReader errorInput = new BufferedReader(
-                new InputStreamReader(p.getErrorStream(), UTF_8))) {
+        try (var errorInput = p.errorReader(UTF_8)) {
           String line;
           while ((line = errorInput.readLine()) != null) {
             commandOutput.addMessage(line, MessageList.ERROR);
@@ -1053,8 +1062,7 @@ public class ContikiMoteType extends BaseContikiMoteType {
       readThread.setDaemon(true);
       readThread.start();
 
-      try (BufferedReader input = new BufferedReader(
-              new InputStreamReader(p.getInputStream(), UTF_8))) {
+      try (var input = p.inputReader(UTF_8)) {
         String line;
         while ((line = input.readLine()) != null) {
           output.add(line);
@@ -1082,17 +1090,11 @@ public class ContikiMoteType extends BaseContikiMoteType {
   private static MoteTypeCreationException createException(String message, Throwable err,
                                                            String command, MessageList outputList) {
     outputList.addMessage("Failed to run command: " + command, MessageList.ERROR);
-
-    var e = new MoteTypeCreationException(message, err);
-    e.setCompilationOutput(outputList);
-    return e;
+    return new MoteTypeCreationException(message, err, outputList);
   }
 
   @Override
   protected void appendVisualizerInfo(StringBuilder sb) {
-    /* JNI class */
-    sb.append("<tr><td>JNI library</td><td>").append(javaClassName).append("</td></tr>");
-
     /* Mote interfaces */
     sb.append("<tr><td valign=\"top\">Mote interface</td><td>");
     for (var moteInterface : moteInterfaceClasses) {
@@ -1105,11 +1107,7 @@ public class ContikiMoteType extends BaseContikiMoteType {
   public Collection<Element> getConfigXML(Simulation simulation) {
     ArrayList<Element> config = new ArrayList<>();
 
-    var element = new Element("identifier");
-    element.setText(getIdentifier());
-    config.add(element);
-
-    element = new Element("description");
+    var element = new Element("description");
     element.setText(getDescription());
     config.add(element);
 
@@ -1154,18 +1152,137 @@ public class ContikiMoteType extends BaseContikiMoteType {
       }
     }
     final var sourceFile = getContikiSourceFile();
-    if (sourceFile != null) { // Compensate for non-standard naming rules.
-      fileFirmware = getExpectedFirmwareFile(sourceFile.getAbsolutePath());
-    }
     if (sourceFile == null) {
       throw new MoteTypeCreationException("No Contiki application specified");
     }
+    // Compensate for non-standard naming rules.
+    fileFirmware = getExpectedFirmwareFile(sourceFile.getAbsolutePath());
     if (getCompileCommands() == null) {
       throw new MoteTypeCreationException("No compile commands specified");
     }
 
     fixInterfacesContents(simulation);
     return configureAndInit(Cooja.getTopParentContainer(), simulation, visAvailable);
+  }
+
+  /**
+   * Generates new source file by reading default source template and replacing
+   * the class name field.
+   *
+   * @param tempDir Directory for temporary files
+   * @param className Java class name (without extension)
+   * @throws MoteTypeCreationException If error occurs
+   */
+  private static void generateLibSourceFile(Path tempDir, String className) throws MoteTypeCreationException {
+    // Create the temporary directory and ensure it is deleted on exit.
+    File dir = tempDir.toFile();
+    StringBuilder path = new StringBuilder(tempDir.toString());
+    // Gradually do mkdir() since mkdirs() makes deleteOnExit() leave the
+    // directory when Cooja quits.
+    for (String p : new String[]{"/org", "/contikios", "/cooja", "/corecomm"}) {
+      path.append(p);
+      dir = new File(path.toString());
+      if (!dir.mkdir()) {
+        throw new MoteTypeCreationException("Could not create temporary directory: " + dir);
+      }
+      dir.deleteOnExit();
+    }
+    
+    Path dst = Path.of(dir + "/" + className + ".java");
+    dst.toFile().deleteOnExit();
+
+    // Instantiate the CoreComm template into the temporary directory.
+    try (var input = ContikiMoteType.class.getResourceAsStream('/' + "CoreCommTemplate.java");
+         var reader = new BufferedReader(new InputStreamReader(Objects.requireNonNull(input), UTF_8));
+         var writer = Files.newBufferedWriter(dst, UTF_8)) {
+      String line;
+      while ((line = reader.readLine()) != null) {
+        writer.write(line.replace("CoreCommTemplate", className) + "\n");
+      }
+      writer.flush();
+      writer.close();
+    } catch (Exception e) {
+      throw new MoteTypeCreationException("Could not generate corecomm source file: " + className + ".java", e);
+    }
+  }
+
+  /**
+   * Compiles Java class.
+   *
+   * @param cooja Cooja object
+   * @param tempDir Directory for temporary files
+   * @param className Java class name (without extension)
+   * @throws MoteTypeCreationException If Java class compilation error occurs
+   */
+  private static void compileSourceFile(Cooja cooja, Path tempDir, String className) throws MoteTypeCreationException {
+    String[] cmd = new String[] {cooja.configuration.javac(),
+            "-cp", System.getProperty("java.class.path"), "--release", String.valueOf(Runtime.version().feature()),
+            // Disable warnings to avoid 3 lines of "warning: using incubating module(s): jdk.incubator.foreign".
+            "-nowarn", "--add-modules", "jdk.incubator.foreign",
+            tempDir + "/org/contikios/cooja/corecomm/" + className + ".java" };
+    ProcessBuilder pb = new ProcessBuilder(cmd);
+    Process p;
+    try {
+      p = pb.start();
+    } catch (IOException e) {
+      throw new MoteTypeCreationException("Could not start Java compiler: " + cmd[0], e);
+    }
+
+    // Try to create a message list with support for GUI - will give not UI if headless.
+    var compilationOutput = MessageContainer.createMessageList(true);
+    var stdout = compilationOutput.getInputStream(MessageList.NORMAL);
+    var stderr = compilationOutput.getInputStream(MessageList.ERROR);
+    try (var outputStream = p.inputReader(UTF_8);
+         var errorStream = p.errorReader(UTF_8)) {
+      int b;
+      while ((b = outputStream.read()) >= 0) {
+        stdout.write(b);
+      }
+      while ((b = errorStream.read()) >= 0) {
+        stderr.write(b);
+      }
+      if (p.waitFor() == 0) {
+        File classFile = new File(tempDir + "/org/contikios/cooja/corecomm/" + className + ".class");
+        classFile.deleteOnExit();
+        return;
+      }
+    } catch (IOException | InterruptedException e) {
+      throw new MoteTypeCreationException("Could not compile corecomm source file: " + className + ".java", e, compilationOutput);
+    }
+    throw new MoteTypeCreationException("Could not compile corecomm source file: " + className + ".java", compilationOutput);
+  }
+
+  /**
+   * Create and return an instance of the core communicator identified by
+   * className. This core communicator will load the native library libFile.
+   *
+   * @param cooja Cooja object
+   * @param tempDir Directory for temporary files
+   * @param libFile Native library file
+   * @return Core Communicator
+   */
+  private static CoreComm createCoreComm(Cooja cooja, Path tempDir, File libFile) throws MoteTypeCreationException {
+    // Loading a class might leave residue in the JVM so use a new name for the next call.
+    final var className = getAvailableClassName();
+    generateLibSourceFile(tempDir, className);
+    compileSourceFile(cooja, tempDir, className);
+
+    ++fileCounter;
+    Class<?> newCoreCommClass;
+    try (var loader = URLClassLoader.newInstance(new URL[]{tempDir.toUri().toURL()})) {
+      newCoreCommClass = loader.loadClass("org.contikios.cooja.corecomm." + className);
+    } catch (IOException | ClassNotFoundException e1) {
+      throw new MoteTypeCreationException("Could not load corecomm class file: " + className + ".class", e1);
+    }
+    if (newCoreCommClass == null) {
+      throw new MoteTypeCreationException("Could not load corecomm class file: " + className + ".class");
+    }
+
+    try {
+      return (CoreComm) newCoreCommClass.getConstructor(File.class).newInstance(libFile);
+    } catch (Exception e) {
+      throw new MoteTypeCreationException("Error when creating corecomm instance: " + className, e);
+    }
   }
   
   protected void fixInterfacesContents(Simulation simulation) {
